added search students and updated errors for input

--- a/index.html
+++ b/index.html
@@ -78,6 +78,26 @@
 		</form>
 		</ul>
 	</section>
+    <br>
+
+    <section id="find-student-section">
+        <h2>Search Student</h2>
+        <form>
+            <label>Search Student Number:</label>
+            <input type="number" name="number" id="number" min=202300001 required>
+            <input type="submit" value="Search:" id="search-button">
+            <label id="student-number-status"></label>
+        </form>
+    </section>
+    <br>
+
+    <section id="find-all-student-section">
+        <h2>Display All Students</h2>
+        <form>
+            <input type="submit" value="Display all Students" id="all-button">
+            <label id="all-student-status"></label>
+        </form>
+    </section>
 
 </body>
 <script src="scripts.js"></script>
