--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
             <form>
                 <div id="name-container">
                     <label>Name: </label>
-                    <input type="text" name="name" id="name" required>
+                    <input type="text" name="name" id="name" placeholder="Ex. Jave Hulleza" required>
                 </div>
                 <div id="name-input-status"></div>
 
                 <div id="age-container">
                     <label>Age: </label>
-                    <input type="number" name="age" id="age" min="19" max="98" required><br>
+                    <input type="number" name="age" id="age" min="19" max="98" placeholder="Ex. 21" required><br>
                 </div>        
                 <div id="age-input-status"></div>
                 
                 <div id="email-container">
                     <label>UP Mail: </label>
-                    <input type="email" name="name" id="email" required><br>
+                    <input type="email" name="email" id="email" placeholder="Ex. cshulleza@up.edu.ph" required><br>
                 </div>
                 <div id="email-input-status"></div>			
                 
@@ -103,7 +103,7 @@
         <div id="find-student-container">
             <form>
                 <label>Search Student Number:</label>
-                <input type="number" name="number" id="number" min=202300000 required>
+                <input type="number" name="number" id="number" min=202300000 placeholder="Ex. 202314625" required>
                 <input type="submit" value="Search" id="search-button">
             </form>
             <div id="status-container">
