Last Touches, Added Links and a bit of hovers ;> -Jave

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </figure>
         <nav id="main-navigation-bar">
             <ul id="main-navigation-bar-list">
-                <li id="home-link">HOME</li>
+                <li id="home-link"><a href="https://www.youtube.com/watch?v=W-0lSiV-H7k&t=91s&ab_channel=LoveLive%21-FANACCOUNT">HOME</a></li>
                 <li id="student-portal-link" class="focused-page">STUDENT PORTAL</li>
             </ul>
         </nav>
